# csv_repair

./: .gitignore  HOW_CSV_REPAIR_WORKS.md  LICENSE  README.md  pyproject.toml
src/csv_repair/: __init__.py  core.py
tests/: test_repair.py
tests/fixtures/: ambiguous_invoice.choice1.expected.csv  ambiguous_invoice.csv  clean.csv  corrupt_description.csv  corrupt_description.expected.csv  corrupt_multi_text_columns.csv  corrupt_multi_text_columns.expected.csv  corrupt_notes.csv  corrupt_notes.expected.csv  invoice_prefix_corrupt.csv  invoice_prefix_corrupt.expected.csv
