[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-repair"
version = "0.1.0"
description = "Repair unquoted CSV rows where a free-text column contains extra commas."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "csv-repair contributors"}]
keywords = ["csv", "data-cleaning", "repair"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
